WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116603
[BlackBerry] Properly fill the ResourceError in FrameLoaderClientBlackBerry::cannotShowURLError
https://bugs.webkit.org/show_bug.cgi?id=116603
Summary
[BlackBerry] Properly fill the ResourceError in FrameLoaderClientBlackBerry::...
Carlos Garcia Campos
Reported
2013-05-22 02:57:29 PDT
It's passing an empty error domain
Attachments
Patch
(1.89 KB, patch)
2013-05-22 03:01 PDT
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2013-05-22 03:01:00 PDT
Created
attachment 202513
[details]
Patch
Xan Lopez
Comment 2
2013-05-22 03:23:38 PDT
Comment on
attachment 202513
[details]
Patch To be honest I don't know what's the effect of this, although the ChangeLog literally says there's no change in behavior. Are these strings picked up by someone above WebKit? It would be good to mention it in the ChangeLog.
Carlos Garcia Campos
Comment 3
2013-05-23 03:52:46 PDT
(In reply to
comment #2
)
> (From update of
attachment 202513
[details]
) > To be honest I don't know what's the effect of this, although the ChangeLog literally says there's no change in behavior. Are these strings picked up by someone above WebKit? It would be good to mention it in the ChangeLog.
This is an internal commit made by Rob, I think it's pretty obvious that we were passing an empty string to the Error and now we are passing a valid error domain. I guess he meant that this doesn't affect any test, because it simply provides a valid error domain, it's up to the api consumers to use that domain or not.
Xan Lopez
Comment 4
2013-05-23 06:29:54 PDT
Comment on
attachment 202513
[details]
Patch OK. I was a bit confused because I didn't get why we would put there a FIXME instead of putting whatever error domain fits better, was wondering if there was something more subtle at play here.
WebKit Commit Bot
Comment 5
2013-05-23 07:14:33 PDT
Comment on
attachment 202513
[details]
Patch Clearing flags on attachment: 202513 Committed
r150585
: <
http://trac.webkit.org/changeset/150585
>
WebKit Commit Bot
Comment 6
2013-05-23 07:14:36 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug