[BlackBerry] Properly fill the ResourceError in FrameLoaderClientBlackBerry::cannotShowURLError https://bugs.webkit.org/show_bug.cgi?id=116603

Patch by Rob Buis <rbuis@rim.com> on 2013-05-23
Reviewed by Xan Lopez.

PR 119789
Internally reviewed by Yong Li.

Provide a domain value for this ResourceError instance. Note that
this does not change behavior.

* WebCoreSupport/FrameLoaderClientBlackBerry.cpp:
(WebCore::FrameLoaderClientBlackBerry::didRestoreFromPageCache):

Canonical link: https://commits.webkit.org/134971@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150585 268f45cc-cd09-0410-ab3c-d52691b4dbfc